working but hella scuffed, might want to fix restart button next time

--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RPS game</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <script src="javascript.js"></script>
+    <button id="start">Start Game</button>
+    <div id="round"></div>
+    <div class="choices">
+        <button id="rock" class="choice">Rock</button>
+        <button id="paper" class="choice">Paper</button>
+        <button id="scissors" class="choice">Scissors</button>
+    </div>
+    <div id="fight"></div>
+    <div id="result"></div>
+    <div id="final"></div>
+    <script src="rps.js"></script>
 </body>
 </html>
